logs/Slang/generated/hdlconv/hdlconvertor_p751.sv.log
name: hdlconvertor_p751
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p751.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p751.sv:52:8: warning: port 'rdy' has no connection [-Wunconnected-port]
memMod mem(sb_intf, clk); // Connect the interface to the module instance
       ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p751.sv:53:8: warning: port 'mode' has no connection [-Wunconnected-port]
cpuMod cpu(.b(sb_intf), .clk(clk)); // Either by position or by name
       ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p751.sv:53:13: error: port 'b' does not exist in module 'cpu'
cpuMod cpu(.b(sb_intf), .clk(clk)); // Either by position or by name
            ^
